--- a/index.html
+++ b/index.html
@@ -1121,12 +1121,7 @@
                 <p class="P18">工作描述：<span class="T2" /></p>
             </td>
             <td style="text-align:left;width:6.5in; " class="Table2_A1">
-                <p class="P12"><span class="T17">自主</span><span
-                        class="T15">创业：以ChatGPT为奇点，抢占人工智能新赛道-AIGC(人工智能生成内容：问答系统与智能客服对话、AI文案写作、AI图片生成绘画、AI编程辅助生成代码、AI视频生成及数字人、游戏操作策略生成、AI语音生成、AI即时翻译以及图文视频跨模态生成等</span><span
-                        class="T17">方向</span><span class="T15">)
-                        技术实现方法：通过调用OpenAI的ChatGPT模型API接口、百度智能云的AI作画接口、本地离线部署Stable Diffusion文本生成图像模型框架、</span><span
-                        class="T15">LangChain</span><span class="T15">上下文理解与逻辑推理、以及各大AI企业机构平台模型下游的AIGC接口应用开发。
-                        立做“AI司令”，指挥AI助理（以Prompt提示工程师“调教”AI机器人）来减少人员成本。</span></p>
+                <p class="P12"><span class="T15">自主创业：以ChatGPT为奇点，抢占人工智能新赛道-AIGC(智能客服对话与问答系统、AI文案写作、AI绘画图像生成、AI编程辅助代码生成、AI视频生成及数字人、AI语音变声、AI即时翻译以及图文视频跨模态生成等方向) 技术实现方法：通过调用OpenAI的ChatGPT模型API接口、Midjourney第三方接口、本地离线部署Stable Diffusion文本生成图像模型框架、LangChain上下文理解与逻辑推理、以及各大AI企业机构平台模型下游的AIGC接口应用开发。 立做“AI司令”，指挥AI助理（以Prompt提示工程师“调教”AI机器人）以及Agent(AI智能体)自动化高效工作来『降本增效』</span></p>
             </td>
         </tr>
         <tr class="Table21">
@@ -1406,6 +1401,39 @@
             <col width="96" />
             <col width="722" />
         </colgroup>
+		<tr class="Table31">
+            <td style="text-align:left;width:0.8611in; " class="Table3_A1">
+                <p class="P21"><a id="OLE_LINK1" />项目经历：<span class="T2" /></p>
+            </td>
+            <td style="text-align:left;width:6.5in; " class="Table3_A1">
+                <p class="P37"><span class="T18">AutoGPT可视化监控AI Agent平台</span><span class="T15"> | 2023年11月 至 2023年12月</span></p>
+            </td>
+        </tr>
+        <tr class="Table31">
+            <td style="text-align:left;width:0.8611in; " class="Table3_A4">
+                <p class="P7"> </p>
+            </td>
+            <td style="text-align:left;width:6.5in; " class="Table3_A1">
+                <p class="P14"><span class="T15">AutoGPT作为AI Agent(AI智能体)的典型代表：具有自主思考能力、感知理解、规划记忆、会用工具、自动执行，是未来智能机器人的大脑雏形。本项目旨在将AutoGPT原有的命令行操作方式封装成Web界面操作及可视化监控Agent执行过程。</span>
+				<span class="T17">【演示网址：<a href="https://autogpt.4u4v.com/" target="_blank">https://autogpt.4u4v.com/</a>】</span></p>
+            </td>
+        </tr>
+        <tr class="Table31">
+            <td style="text-align:left;width:0.8611in; " class="Table3_A1">
+                <p class="P21"><a id="OLE_LINK1" />项目经历：<span class="T2" /></p>
+            </td>
+            <td style="text-align:left;width:6.5in; " class="Table3_A1">
+                <p class="P37"><span class="T18">GPTs投标书生成工具</span><span class="T15"> | 2023年10月 至 2023年11月</span></p>
+            </td>
+        </tr>
+        <tr class="Table31">
+            <td style="text-align:left;width:0.8611in; " class="Table3_A4">
+                <p class="P7"> </p>
+            </td>
+            <td style="text-align:left;width:6.5in; " class="Table3_A1">
+                <p class="P14"><span class="T15">用户只需复制采购需求、招标内容，或者上传招标内容需求文档，甚至只需提交招标采购网文链接——GPT4即可根据招标内容、采购清单自动生成对应需求的投标标书，并使之Word文档符合标书的模版格式要求。注：此工具仅为GPTs示例，让大家知道，不懂代码的人也能构建专属的个性化ChatGPT.</span></p>
+            </td>
+        </tr>
 		<tr class="Table31">
             <td style="text-align:left;width:0.8611in; " class="Table3_A1">
                 <p class="P21"><a id="OLE_LINK1" />项目经历：<span class="T2" /></p>
@@ -2317,14 +2345,15 @@
                     1.数据集预训练、特征工程、RLHF(基于人类反馈强化学习) <br />
                     2.LangChain：基于大型语言模型（LLM）的应用程序构建框架;<br />
                     3.Transformer(GPT大模型前传)，Self-Attention机制、编码器与解码器；<br />
-                    4.向量数据库（Milvus、Faiss、Vespa、Pinecone、Zilliz Cloud）<br />
-                    5.CoT思维链（Prompt提示的基石）、ToT思维树；<br />
+                    4.向量数据库（Milvus、Faiss、Zilliz Cloud）；RAG(检索增强生成)<br />
+                    5.CoT思维链（Prompt提示的基石）、ToT思维树；百度云千帆大模型训练平台<br />
                     6.Fine-tuning微调(参数)、Few-shot小样本学习；Embedding(文本转向量词嵌入技术)<br />
                     7.提示工程（Prompt Engineering）；HuggingFace（在线体验AI模型社区）<br />
                     8.逻辑推理（逻辑回归、统计归纳和演绎生成）；ModelScope魔搭MaaS(模型即服务)	<br />
                     9.N卡GPU部署CUDA+ Pytorch框架+Python(含各种依赖包)运行环境。<br />
-                    10.熟悉谷歌Bard大模型PaLM2、Meta羊驼LLaMA、百度文心一言、阿里通义千问、360智脑、智源悟道、清华&智谱ChatGLM、讯飞星火等知名厂商研究机构发布的AI大模型。
-                    基于OpenAI的ChatGPT模型API接口开发各种应用，以及各主流AI企业机构平台大模型下游的AIGC接口应用开发【详见：项目经历】。
+                    10.熟悉谷歌大模型Gemini和PaLM、Meta羊驼LLaMA2、百度文心一言、阿里通义千问、360智脑、智源悟道、清华&智谱ChatGLM、讯飞星火等知名厂商机构发布的AI大模型。<br />
+					11.Agent(AI智能体)如：AutoGPT、BabyAGI、AbilityAI；GPTs(GPT应用商店) <br />
+                    12.基于OpenAI的ChatGPT模型API接口开发各种应用，以及各主流AI企业机构平台大模型下游的AIGC接口应用开发【详见：<b>项目经历</b>】。
                 </span></p>
             </td>
         </tr>
