--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
     <title>水木的个人网页简历</title>
     <meta name="description" content="水木的个人Web网页简历。" />
-
+	<meta name="robots" content="noindex, nofollow" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=0.5,maximum-scale=1.0,minimum-scale=0.5,user-scalable=yes" />
+    <meta name="viewport" content="width=device-width,initial-scale=0.5,maximum-scale=1.0,minimum-scale=0.5,user-scalable=yes" />
     <meta name="renderer" content="webkit">
     <meta name="format-detection" content="email=no" />
     <meta name="format-detection" content="telephone=no" />
